--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-Page moved to : <a href="htpps://wavmark.github.io">wavmark.github.io </a>
+Page moved to : <a href="https://wavmark.github.io">wavmark.github.io </a>
 
 </body>
 </html>
